--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+<html lang="ru" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>{% block title %}Заголовок вкладки{% endblock %}</title>
+    {% block stylesheets %}{% endblock %}
+    {% block head_javascripts %}{% endblock %}
+    <link rel="stylesheet" href="{{ asset('css/index.css') }}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      {% if is_granted('ROLE_USER') %}
+      <a title="На главную" href="{{ path('main') }}"><img src="{{ asset ('img/logo.png')}}" alt="logo"></a>
+      {% elseif is_granted('ROLE_ADMIN') %}
+      <a title="Личный кабинет" href="{{ path('admin_account') }}"><img src="{{ asset ('img/logo.png')}}" alt="logo"></a>
+      {% else %}
+      <a title="На главную" href="{{ path('main') }}"><img src="{{ asset ('img/logo.png')}}" alt="logo"></a>
+      {% endif %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+      <div class="travelTitle">
+        <h1>Travel Blog</h1>
+      </div>
+
+      <div class="registr-end">
+        {% if is_granted('ROLE_USER') %}
+          <a href="{{ path('app_logout') }}">Выйти</a>
+          <p class="acc" >Аккаунт: {{ app.user.username }}</p>
+        {% elseif is_granted('ROLE_ADMIN') %}
+          <a href="{{ path('app_logout') }}">Выйти</a>
+          <p class="acc">Аккаунт: {{ app.user.username }}</p>
+        {% else %}
+          <a href="{{ path('app_login') }}">Вход</a>
+          <a href="{{ path('registration') }}">Регистрация</a>
+        {% endif %}
+
+      </div>
+
+    </header>
+
+    {% block body %}{% endblock %}
+
+    <footer></footer>
+
+    {% block body_javascripts %}{% endblock %}
+
+  </body>
 </html>
